Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
   <!-- Write your HTML in this file -->
   <ul>Grilled Cheese
     <li>2 slices of bread</li>
-    <li>4 slices of cheese</li>
+    <li>4 slices of cheese
       <ul>
         <li>Cheddar</li>
         <li>Mozzarella</li>
         <li>Pepper Jack</li>
+        </li>
       </ul>
     <li>1 tbsp of butter</li>
   </ul>
