--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 <body>
 
   <!-- Write your HTML in this file -->
-  <ul>Grilled Cheese
+  <ul>
+    <li>Grilled Cheese
     <li>2 slices of bread</li>
     <li>4 slices of cheese
       <ul>
@@ -16,6 +17,7 @@
         </li>
       </ul>
     <li>1 tbsp of butter</li>
+  </li>
   </ul>
 
 </body>
